[package]
name = "curvine-lancedb-rs"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Facade crate for LanceDB on Curvine"

[workspace]

[lib]
name = "lancedb"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
lance-core = "4.0.0"
lance-io = "4.0.0"
lancedb_upstream = { package = "lancedb", version = "0.27.2", default-features = false }
object_store = "0.12.5"
snafu = "0.8.9"
url = "2.5.8"

[dev-dependencies]
tempfile = "3.21.0"
tokio = { version = "1.42.0", features = ["full"] }

[features]
default = []
aws = ["lancedb_upstream/aws"]
azure = ["lancedb_upstream/azure"]
bedrock = ["lancedb_upstream/bedrock"]
dynamodb = ["lancedb_upstream/dynamodb"]
fp16kernels = ["lancedb_upstream/fp16kernels"]
gcs = ["lancedb_upstream/gcs"]
huggingface = ["lancedb_upstream/huggingface"]
openai = ["lancedb_upstream/openai"]
oss = ["lancedb_upstream/oss"]
polars = ["lancedb_upstream/polars"]
remote = ["lancedb_upstream/remote"]
s3-test = ["lancedb_upstream/s3-test"]
sentence-transformers = ["lancedb_upstream/sentence-transformers"]
