[package]
name = "curvine-server"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
jni = ["curvine-ufs/jni"]
spdk = ["orpc/spdk"]
spdk-rdma = ["spdk", "orpc/spdk-rdma"]

[dependencies]
orpc = { workspace = true }
curvine-common = { workspace = true }
curvine-client = { workspace = true }
curvine-ufs = { workspace = true }
curvine-web = { workspace = true }
prost = { workspace = true }
prost-build = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
rocksdb = { workspace = true }
log = { workspace = true }
raft = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
glob = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
num_enum = { workspace = true }
indexmap = { workspace = true }
clap = { workspace = true }
mini-moka = { workspace = true }
regex = { workspace = true }
linked-hash-map = { workspace = true }
dashmap = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
parking_lot = { workspace = true }
lru = { workspace = true }
byteorder = { workspace = true }
